Creacion, registro y aplilcacion de libreria para convertir aplicacion en SPA

--- a/MiTramite_Front/WAMiTramite/Components/Layout/MainLayout.razor
+++ b/MiTramite_Front/WAMiTramite/Components/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
-﻿@inherits LayoutComponentBase
+﻿@using WAMiTramite.Handlers
+@inherits LayoutComponentBase
 <!-- Navbar con diseño de Gestora Nacional -->
 <header>
     <nav class="navbar navbar-expand-lg">
