--- a/MiTramite_Front/WAMiTramiteGestion/Components/Layout/MainLayout.razor
+++ b/MiTramite_Front/WAMiTramiteGestion/Components/Layout/MainLayout.razor
@@ -30,7 +30,7 @@
 
 <!-- Contenido principal -->
 <main style="background-color: #f5f7fb; min-height: 100vh;">
-    <article class="container-fluid p-4">
+    <article class="container-fluid p-0 " style="padding: 0 !important;">
         @Body
     </article>
 </main>
